(FE - Store): Fix style issue with whitespace at bottom of page

--- a/frontend/src/cw-store/cw-commodity-display.scss
+++ b/frontend/src/cw-store/cw-commodity-display.scss
@@ -8,7 +8,7 @@
     align-content: flex-start;
 
     // width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 
     // Margins
     // margin-top: 2rem;
